# rviz_plugin

./: CMakeLists.txt  package.xml  plugin.xml  plugin_description.xml
include/my_rviz_plugin/: auto_subscriber_display.h  custom_point_cloud_common.h
install/share/my_rviz_plugin/: plugin.xml  plugin_description.xml
src/: auto_subscriber_display.cpp  custom_point_cloud_common.cpp
